2012-01-04 Jan Schulte <jschulte -at - physik.rwth-aache.de>
	* fixed PF Muons
	* changed PF Isolation to work with 4_4_X
	* prepare script now reads cuts from config and checks them
	* HBHE noise filter
	* event filtering (beam scraping & total kinematics)
	* taus are now optional 
	* photons are now in, done by Julien
	* HCAL noise infos removed
	* fixed a bug in single muon skims 
2011-11-02 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* type 1 met correction for pf met two
    * corrected TreeContent.h
    * new prepare script
    * merged config pyton
2011-10-26 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* type 1 met correction
    * muon vertex
    * fixed negative event numbers
2011-08-04 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* fixed pfCandidate/met Correction
	* no missleading ele_ID
	* cleanup ele_numberOfHists
	* fast outputfile tester
	* tagged as version v7-4
2011-08-02 Sebastian Thüer <thuer -at- physik.rwth-aachen.de>
	* some additional muon TeV Reco variables
	* number of signal tracks for pftaus
	* tagged as version v7-3
2011-08-01 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* new PFTau algo
	* new selection options
	* PFiso for electrons and muons
	* caloJets are optional
	* Met without muons
	* Met without electrons
	* merge with compression
2011-06-06 Sebastian Thüer <thuer -at- physik.rwth-aachen.de>
	* fix trigger info
	* bugfix with PFTau
2011-05-31 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* new PF muons
	* new HCAL noise infos
	* new PU infos in MC
	* new PFJet with PFAK5chs
	* new PFTaus
	* new JES
	* new PFMETnoPU
	* new metTagJESCorAK5CaloJetMuons
	* new metTagcorMetGlobalMuons
	* new metTagHO
	* new metTagNoHF
	* new info for PFmet+ CaloMet
	* new cut on HT
	* cleanup Python file (no PFJets extra and several things for JEC)
	* fix truth particles
	* optional susy parameters
	* optional all leptons
	* new filter out scraping
	* fix electron isolation